# DataFrameValidator

./: README.md
dataframe-validator/: README.md  pyproject.toml
dataframe-validator/dataframe_validator/: __init__.py  polars_validator.py  polars_validator_frame.py
dataframe-validator/test/: test_expect_column_to_contain_unique_values.py  test_schema.py
dataframe-validator/tests/: test_expect_column_to_contain_unique_values.py  test_expect_column_value_length_greater_than.py  test_expect_column_value_to_be_in_set.py
synthetic_datagen/: README.md  generate_members.py  pyproject.toml
validate/: README.md  customers-1000.csv  fail_pension_scheme_members.csv  main.py  pension_scheme_members.csv  pyproject.toml  validator.py  validator_frame.py
