[project]
name = "dataframe-validator"
version = "0.1.0"
description = "A library for validating dataframes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.10",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dataframe-validator",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.uv.sources]
dataframe-validator = { workspace = true }
